Improve Dockerfile